# gate1

./: Cargo.toml  README.md
.github/workflows/: ci.yml  fmt-fix.yml  preflight.yml
benches/: evaluate.rs
docs/: SECURITY.md
src/: atom.rs  context.rs  error.rs  lib.rs  policy.rs
tests/: allocations.rs  decision_paths.rs
