[package]
name = "gate1"
version = "0.1.0"
edition = "2021"
description = "Small, deterministic authorization kernel with bounded evaluation"
license = "MIT"
rust-version = "1.74"
repository = "https://github.com/Qarait/gate1"
readme = "README.md"
keywords = ["authorization", "policy", "security", "access-control"]

[lib]
name = "gate1"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "evaluate"
harness = false
