[package]
name = "gate1"
version = "0.1.4"
edition = "2021"
description = "Bounded authorization evaluation for Rust"
license = "MIT"
rust-version = "1.74"
repository = "https://github.com/Qarait/gate1"
readme = "README.md"
keywords = ["authorization", "policy", "security", "access-control"]

[lib]
name = "gate1"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "evaluate"
harness = false
